--- a/project/docker-compose.yml
+++ b/project/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     volumes:
       - ./nginx:/etc/nginx/conf.d:ro
       - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
       - ./site:/var/www/html:ro # this static or specific frontend service
     ports:
       - 80:80
