feature: automate all the script

--- a/project/nginx/default.conf
+++ b/project/nginx/default.conf
@@ -2,7 +2,7 @@ server {
 
 	listen      80;
 	listen [::]:80;
-	server_name example.xyz www.example.xyz;
+	#!SERVERNAMES!#
 
 	return 301 https://$host$request_uri;
 
@@ -12,7 +12,9 @@ server {
 
 	listen      443 ssl;
 	listen [::]:443 ssl;
-	server_name example.xyz www.example.xyz;
+	#!SERVERNAMES!#
+
+	ssl_preread on;
 
 	# this static or a specific proxy location
 	location / {
@@ -25,7 +27,11 @@ server {
 
 	include /etc/letsencrypt/options-ssl-nginx.conf;
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-	ssl_certificate /etc/letsencrypt/live/example.xyz/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/example.xyz/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/$domain/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/$domain/privkey.pem;
 
+}
+
+map $ssl_preread_server_name $domain {
+	#!DOMAINS!#
 }
