rework: change mode of get domain name in ssl directives

--- a/project/nginx/default.conf
+++ b/project/nginx/default.conf
@@ -18,8 +18,6 @@ server {
 	listen [::]:443 ssl;
 	#!SERVERNAMES!#
 
-	ssl_preread on;
-
 	# this static or a specific proxy location
 	location / {
 		root /var/www/html;
@@ -27,11 +25,7 @@ server {
 
 	include /etc/letsencrypt/options-ssl-nginx.conf;
 	ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-	ssl_certificate /etc/letsencrypt/live/$domain/fullchain.pem;
-	ssl_certificate_key /etc/letsencrypt/live/$domain/privkey.pem;
+	ssl_certificate /etc/letsencrypt/live/$server_name/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/$server_name/privkey.pem;
 
-}
-
-map $ssl_preread_server_name $domain {
-	#!DOMAINS!#
 }
